# propquote

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  fit.yml
crates/propquote-core/: Cargo.toml
crates/propquote-core/src/: amm.rs  bs58.rs  decode.rs  lib.rs  math.rs  types.rs
crates/propquote-obric/: Cargo.toml
crates/propquote-obric/examples/: quote_ladder.rs
crates/propquote-obric/src/: lib.rs  quote.rs  state.rs
crates/propquote-obric/tests/: quote_tests.rs
crates/propquote-replay/: Cargo.toml
crates/propquote-replay/src/: fit.rs  lib.rs  sample.rs  venues.rs
crates/propquote-replay/tests/: fit_tests.rs
crates/propquote-sim/: Cargo.toml
crates/propquote-sim/src/: account_json.rs  lib.rs
docs/: bit-exact-handoff.md
tools/: fit_venue.py  solfi_fit.py  spread_probe.py
