[workspace]
resolver = "2"
members = [
    "crates/propquote-core",
    "crates/propquote-obric",
    "crates/propquote-replay",
    "crates/propquote-sim",
]
# The heavy LiteSVM sim crate is excluded from the default set so `cargo build/test/clippy`
# (and `cargo check`) stay fast and dependency-light. CI builds the sim crate in a separate job.
default-members = [
    "crates/propquote-core",
    "crates/propquote-obric",
    "crates/propquote-replay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.84"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
