[package]
name = "propquote-replay"
description = "Fit closed-form prop-AMM quote parameters from (state, amount_in) -> amount_out samples."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
propquote-core = { path = "../propquote-core" }
propquote-obric = { path = "../propquote-obric" }

[lints.rust]
unsafe_code = "forbid"
